--- a/index.html
+++ b/index.html
@@ -7,6 +7,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology. Book your free consultation today." />
   <title>Inkless Is More | Laser Tattoo Removal Kenya</title>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "MedicalBusiness",
+      "name": "Inkless Is More",
+      "image": "https://test.inklessismore.ke/logo.png",
+      "description": "Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology.",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Two Rivers Mall, 1st Floor",
+        "addressLocality": "Nairobi",
+        "addressRegion": "Nairobi",
+        "addressCountry": "KE"
+      },
+      "url": "https://test.inklessismore.ke",
+      "telephone": "+254708901505",
+      "priceRange": "$$",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": [
+            "Monday",
+            "Tuesday",
+            "Wednesday",
+            "Thursday",
+            "Friday",
+            "Saturday"
+          ],
+          "opens": "09:00",
+          "closes": "18:00"
+        }
+      ]
+    }
+  </script>
 </head>
 
 
@@ -16,4 +50,3 @@
 </body>
 
 </html>
-
