--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology. Book your free consultation today." />
   <title>Inkless Is More | Laser Tattoo Removal Kenya</title>
+  <link rel="canonical" href="https://test.inklessismore.ke" />
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
