--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
   <link rel="icon" type="image/png" href="/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology. Book your free consultation today." />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://test.inklessismore.ke/" />
+  <meta property="og:title" content="Inkless Is More | Laser Tattoo Removal Kenya" />
+  <meta property="og:description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology." />
+  <meta property="og:image" content="https://test.inklessismore.ke/logo.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://test.inklessismore.ke/" />
+  <meta property="twitter:title" content="Inkless Is More | Laser Tattoo Removal Kenya" />
+  <meta property="twitter:description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology." />
+  <meta property="twitter:image" content="https://test.inklessismore.ke/logo.png" />
+
   <title>Inkless Is More | Laser Tattoo Removal Kenya</title>
   <link rel="canonical" href="https://test.inklessismore.ke" />
   <script type="application/ld+json">
