--- a/index.html
+++ b/index.html
@@ -1,70 +1,13 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/png" href="/logo.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
-  <meta name="theme-color" content="#020817" media="(prefers-color-scheme: dark)" />
-  <meta name="description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology. Book your free consultation today." />
-  
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://test.inklessismore.ke/" />
-  <meta property="og:title" content="Inkless Is More | Laser Tattoo Removal Kenya" />
-  <meta property="og:description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology." />
-  <meta property="og:image" content="https://test.inklessismore.ke/logo.png" />
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://test.inklessismore.ke/" />
-  <meta property="twitter:title" content="Inkless Is More | Laser Tattoo Removal Kenya" />
-  <meta property="twitter:description" content="Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology." />
-  <meta property="twitter:image" content="https://test.inklessismore.ke/logo.png" />
-
-  <title>Inkless Is More | Laser Tattoo Removal Kenya</title>
-  <link rel="canonical" href="https://test.inklessismore.ke" />
-  <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "MedicalBusiness",
-      "name": "Inkless Is More",
-      "image": "https://test.inklessismore.ke/logo.png",
-      "description": "Kenya's trusted laser tattoo removal specialists. Safe, scar-free, and effective tattoo removal using advanced Picosecond laser technology.",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Two Rivers Mall, 1st Floor",
-        "addressLocality": "Nairobi",
-        "addressRegion": "Nairobi",
-        "addressCountry": "KE"
-      },
-      "url": "https://test.inklessismore.ke",
-      "telephone": "+254708901505",
-      "priceRange": "$$",
-      "openingHoursSpecification": [
-        {
-          "@type": "OpeningHoursSpecification",
-          "dayOfWeek": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday",
-            "Saturday"
-          ],
-          "opens": "09:00",
-          "closes": "18:00"
-        }
-      ]
-    }
-  </script>
-</head>
-
-
-<body>
-  <div id="root"></div>
-  <script type="module" src="/src/main.tsx"></script>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Inkless Is More</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
